copy config files before build

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,6 @@ rvm:
 branches:
   only:
     - production
+before_script:
+  - "cp config/database.yml.example config/database.yml"
+  - "cp config/monit.yml.example config/monit.yml"
