try running grant all privleges as root

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ before_script:
   - mysql -e "CREATE DATABASE nuntium_test;"
   - mysql -e "CREATE USER 'nuntium'@'localhost';"
   - mysql -e "SET PASSWORD FOR 'nuntium'@'localhost' = PASSWORD('secret');"
+  - mysql -u root -e "GRANT ALL ON nuntium_test.* TO 'nuntium'@'localhost';"
 services:
   - memcache
