add the rest of the travis build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,10 @@ before_script:
   - mysql -e "CREATE USER 'nuntium'@'localhost';"
   - mysql -e "SET PASSWORD FOR 'nuntium'@'localhost' = PASSWORD('secret');"
   - mysql -u root -e "GRANT ALL ON nuntium_test.* TO 'nuntium'@'localhost';"
+script:
+  - bundle exec rake db:schema:load
+  - bundle exec rake db:test:prepare
+  - bundle exec rake spec
+  - bundle exec rake test
 services:
   - memcache
